feat (math): quat inverse, quat <-> mat, mat4 inverse, mat4 scale

--- a/src/math/BUILD.bazel
+++ b/src/math/BUILD.bazel
@@ -9,8 +9,9 @@ cc_library(
         "functions.h",
     ],
     srcs = [
-        "mat.cpp",
         "functions.cpp",
+        "quat.cpp",
+        "mat.cpp",
     ],
     includes = [".."],
     deps = [
