feat (math): transform logic

--- a/src/math/BUILD.bazel
+++ b/src/math/BUILD.bazel
@@ -7,11 +7,13 @@ cc_library(
         "mat.h",
         "quat.h",
         "functions.h",
+        "transform.h",
     ],
     srcs = [
         "functions.cpp",
         "quat.cpp",
         "mat.cpp",
+        "transform.cpp",
     ],
     includes = [".."],
     deps = [
