feat (assets): export scene without textures

--- a/src/assets/scene/BUILD.bazel
+++ b/src/assets/scene/BUILD.bazel
@@ -8,6 +8,7 @@ cc_library(
     hdrs = [
         "export_scene.h",
         "scene_data.h",
+        "scene_header.h",
     ],
     visibility = ["//visibility:public"],
     deps = [
