fix (gaussian splatting): camera flip and remove unused bazel targets

--- a/demos/gaussian_splatting/BUILD.bazel
+++ b/demos/gaussian_splatting/BUILD.bazel
@@ -110,7 +110,7 @@ cc_binary(
     ],
     deps = [
         "//src/rhi:context",
-        "//demos/common:scene",
+        "//src/utils:utils",
         "//demos/common:simple_camera_fps",
     ],
     data = [
