feat (assets): export image data into scene file

--- a/src/assets/scene/BUILD.bazel
+++ b/src/assets/scene/BUILD.bazel
@@ -33,6 +33,7 @@ cc_library(
         "//src/math:math",
         "//src/rhi:context",
         "//src/assets/geometry:mesh",
+        "//src/assets/image:import_image"
     ],
     visibility = ["//visibility:public"],
 )
